istio-books/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapp-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookapp
      version: v1
  template:
    metadata:
      labels:
        app: bookapp
        version: v1
    spec:
      containers:
      - name: bookapp
        image: docker.io/juablazmahuerta/book-app:v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
          - containerPort: 9991
