istio-books/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapp-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookapp
      version: v2
  template:
    metadata:
      labels:
        app: bookapp
        version: v2
    spec:
      containers:
      - name: bookapp
        image: docker.io/juablazmahuerta/book-app:v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
          - containerPort: 9991
