istio-books/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookapp
  labels:
    app: bookapp
spec:
  ports:
  - port: 9991
    name: http
  selector:
    app: bookapp
