istio-books/05-virtual-service-v1-80-v2-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookapp
spec:
  hosts:
  - "*"
  gateways:
  - bookapp-gateway
  http:
  - match:
    - uri:
        regex: .*
    route:
    - destination:
        host: bookapp
        subset: v1
        port:
          number: 9991
      weight: 80
    - destination:
        host: bookapp
        subset: v2
        port:
          number: 9991
      weight: 20
