istio-books/06-virtual-service-v1-70-v2-30.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookapp
spec:
  hosts:
  - "*"
  gateways:
  - bookapp-gateway
  http:
  - match:
    - uri:
        regex: .*
    route:
    - destination:
        host: bookapp
        subset: v1
        port:
          number: 9991
      weight: 70
    - destination:
        host: bookapp
        subset: v2
        port:
          number: 9991
      weight: 30
