istio-books/10-destination-rule-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookapp
spec:
  host: bookapp
  subsets:
  - name: v2
    labels:
      version: v2
