istio-books/destination-rule-v2-to-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookapp
spec:
  host: bookapp
  subsets:
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
