istio-books/destination-rule-v3-to-v4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookapp
spec:
  host: bookapp
  subsets:
  - name: v3
    labels:
      version: v3
  - name: v4
    labels:
      version: v4
